# kubernetz

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: architecture.py  diagram.py  export.py  generate.py  router.py
backend/app/generators/: __init__.py  argocd.py  base.py  helm.py  kubernetes.py  observability.py  terraform.py
backend/app/inference/: __init__.py  classifier.py  engine.py
backend/app/models/: __init__.py  diagram.py  generation.py  platform.py
backend/app/parsers/: __init__.py  base.py  drawio.py  excalidraw.py  image.py  mermaid.py
backend/app/validators/: __init__.py  engine.py
backend/app/validators/rules/: networking.py  security.py  storage.py  workloads.py
backend/tests/: test_api.py  test_generators.py  test_inference.py  test_parsers.py  test_validators.py
diagrams/: README.md  example-microservices.mmd  example-microservices.xml
docs/: api.md  architecture.md  diagram-formats.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: client.ts
frontend/src/components/: ArchitectureGraph.tsx  DiagramUploader.tsx  ExportPanel.tsx  FilePreview.tsx  GenerationOptions.tsx  MermaidInput.tsx  ValidationReport.tsx
frontend/src/hooks/: useGeneration.ts
frontend/src/pages/: EditorPage.tsx  GeneratePage.tsx  (+1 more)
scripts/: generate-from-mermaid.sh  parse-diagram.sh
(+5 files in other folders)
